made the auth controller and authentication works now
