# routes/api.php
@@ -5,6 +5,8 @@ use App\Http\Controllers\Admin\AdminEventController;
 use App\Http\Controllers\Admin\AdminGroupController;
 use App\Http\Controllers\Admin\AdminMessageController;
 use App\Http\Controllers\Admin\AdminUserController;
+use App\Http\Controllers\User\AuthController;
+use App\Http\Controllers\User\UserController;
 use Illuminate\Support\Facades\Route;
 
 ///////////////////////////////////////////////////////////////////////////////////
@@ -66,8 +68,8 @@ Route::prefix('user')->controller(UserController::class)->group(function () {
 Route::controller(AuthController::class)->group(function () {
     Route::post('/login', 'login');
     Route::post('/register', 'register');
-    Route::post('/logout', 'logout');
     Route::get('/refresh', 'refresh');
+    Route::post('/logout', 'logout');
 });
 
 
